# Root-Mask-and-Skeletons

./: .gitignore  .pre-commit-config.yaml  CODE_REVIEW.md  FACETED_VIEW_MODIFICATIONS.md  FEATURES.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_REPORT_PART2.md  README.md  REMEDIATION_REPORT.md  code_review_findings.json  dash_app.py  data_processor.py  display_controller.py  enhanced_mask_tracing_interface.py  generate_skeleton_handler.py  image_manager.py  image_normalization_interface.py  main.py  main_window.py  mask_generation_handler.py  mask_handler.py  mask_tracing_interface.py  normalization_defaults.json  pix2pix_inference_script.py  pyproject.toml  requirements-dev.txt  requirements.txt  root_length_calculator.py  root_length_inference_handler.py  root_length_visulization.py  sam2_integration.py  skeleton_handler.py  temp_main_viz_manager.py  zoom_view.py
app/: __init__.py  config.py  logging_config.py
code_review_graph/: GRAPH_REPORT.md  _build_graph.py  _relabel.py  _run_graphify.py  graph.html  graph.json
data/: image_folder.py
datasets/: combine_A_and_B.py
docs/: Architecture_2 useful.md  Architecture_2.md  BUILD_EXECUTABLE.md  KNOWN_ISSUES.md  SPROUTS_DASH_THEME.md
field docs ex/: 2024 Argenta Tube Locations.xlsx  2024 Argenta Tube Measurements.xlsx  FieldMap.xlsx  Minirhizotron Reference Images.csv  PlotIDS.csv  TubeIDS.csv  UIUC_Fieldbook (2).xlsx
mask_model/: model.py
models/: networks.py
options/: base_options.py
resources/: resource_utils.py
scripts/: build.bat  build.ps1
temp_code/: UIGen.py
tests/: test_error_column.py  (+7 more)
(+71 files in other folders)
